[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-bit-depth-enhancement"
version = "0.1.0"
description = "Bit-depth enhancement and banding removal with classical and deep learning methods"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.11.0",
    "tifffile>=2023.0.0",
    "torch>=2.0.0"
]

[project.urls]
repository = "https://github.com/subraoul/ComfyUI_Bit-Depth-Enhancer"

[tool.setuptools.packages.find]
include = ["bit_depth_enhancement*"]

[tool.comfy]
PublisherId = "subraoul"
DisplayName = "Bit Depth Enhancement"
