[project]
name = "comfyui-bit-depth-enhancer"
description = "Bit-depth enhancement and banding removal with classical and deep learning methods"
version = "0.1.1"
license = {file = "LICENSE"}
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.11.0",
    "tifffile>=2023.0.0",
    "torch>=2.0.0"
]

[project.urls]
Repository = "https://github.com/subraoul/ComfyUI_Bit-Depth-Enhancer"

[tool.comfy]
PublisherId = "subraoul"
DisplayName = "Bit Depth Enhancer"
